WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36735
Live regions don't send out notifications when the element changing is the live region
https://bugs.webkit.org/show_bug.cgi?id=36735
Summary
Live regions don't send out notifications when the element changing is the li...
chris fleizach
Reported
2010-03-28 16:42:30 PDT
for example, if an image is the live region, and its alt text changes, it doesn't send out live region notifications
Attachments
patch
(4.71 KB, patch)
2010-03-28 16:49 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-03-28 16:49:24 PDT
Created
attachment 51871
[details]
patch
chris fleizach
Comment 2
2010-03-28 16:50:44 PDT
the problem was that a live region change notification was only generated when an ancestor was a live region. it did not take into account if the element itself was the live region
WebKit Commit Bot
Comment 3
2010-03-29 11:07:24 PDT
Comment on
attachment 51871
[details]
patch Rejecting patch 51871 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--quiet']" exit_code: 1 Running build-dumprendertree Compiling Java tests make: Nothing to be done for `default'. Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 12578 test cases. fast/workers/termination-with-port-messages.html -> failed Exiting early after 1 failures. 8861 tests run. 184.30s total testing time 8860 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 5 test cases (<1%) had stderr output Full output:
http://webkit-commit-queue.appspot.com/results/1634020
chris fleizach
Comment 4
2010-03-29 11:10:00 PDT
unlikely that this patch caused this test to fail fast/workers/termination-with-port-messages.html
Eric Seidel (no email)
Comment 5
2010-03-29 11:15:40 PDT
Comment on
attachment 51871
[details]
patch Looks like
bug 36585
.
WebKit Commit Bot
Comment 6
2010-03-29 16:38:48 PDT
Comment on
attachment 51871
[details]
patch Clearing flags on attachment: 51871 Committed
r56749
: <
http://trac.webkit.org/changeset/56749
>
WebKit Commit Bot
Comment 7
2010-03-29 16:38:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug