2010-03-29  Chris Fleizach  <cfleizach@apple.com>

Reviewed by Beth Dakin.

        Bug 36735 - Live regions don't send out notifications when the element changing is the live region
        https://bugs.webkit.org/show_bug.cgi?id=36735

        * platform/mac/accessibility/aria-liveregion-on-image-expected.txt: Added.
        * platform/mac/accessibility/aria-liveregion-on-image.html: Added.
2010-03-29  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Bug 36735 - Live regions don't send out notifications when the element changing is the live region
        https://bugs.webkit.org/show_bug.cgi?id=36735

        Test: platform/mac/accessibility/aria-liveregion-on-image.html

        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::contentChanged):

Canonical link: https://commits.webkit.org/48043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56749 268f45cc-cd09-0410-ab3c-d52691b4dbfc